--- a/url_shortener/templates/layout.html
+++ b/url_shortener/templates/layout.html
@@ -4,21 +4,25 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<title>URL_Shortener</title>
 </head>
-<body>
+<body class="bg-color">
 	{% block header %}
 	{% endblock header %}
-	<main class="container">
-		{% with messages = get_flashed_messages(with_categories=true) %}
-			{% if messages %}
-				{% for category, message in messages %}
-					<div class="alert alert-{{ category }}">
-						{{ message }}
-					</div>
-				{% endfor %}
-			{% endif %}
-		{% endwith %}
-		{% block content %}
-		{% endblock content%}
+	<main role="main" class="container">
+		<div class="row justify-content-md-center">
+			<div class="col-md-6 mt-5">
+				{% with messages = get_flashed_messages(with_categories=true) %}
+					{% if messages %}
+						{% for category, message in messages %}
+							<div class="alert alert-{{ category }}">
+								{{ message }}
+							</div>
+						{% endfor %}
+					{% endif %}
+				{% endwith %}
+				{% block content %}
+				{% endblock content%}
+			</div>
+		</div>
 	</main>
 </body>
 </html>
