--- a/url_shortener/templates/layout.html
+++ b/url_shortener/templates/layout.html
@@ -2,14 +2,16 @@
 <html>
 <head>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>URL_Shortener</title>
 </head>
-<body class="bg-color">
+<body>
 	{% block header %}
 	{% endblock header %}
-	<main role="main" class="container">
+	<div role="main" class="container-fluid">
 		<div class="row justify-content-md-center">
-			<div class="col-md-6 mt-5">
+			<div class="col-12 col-md-6 mt-5">
 				{% with messages = get_flashed_messages(with_categories=true) %}
 					{% if messages %}
 						{% for category, message in messages %}
@@ -23,6 +25,6 @@
 				{% endblock content%}
 			</div>
 		</div>
-	</main>
+	</div>
 </body>
 </html>
