--- a/url_shortener/templates/layout.html
+++ b/url_shortener/templates/layout.html
@@ -9,7 +9,7 @@
 <body>
 	{% block header %}
 	{% endblock header %}
-	<div role="main" class="container-fluid">
+	<div role="main" class="container">
 		<div class="row justify-content-md-center">
 			<div class="col-12 col-md-6 mt-5">
 				{% with messages = get_flashed_messages(with_categories=true) %}
