--- a/url_shortener/templates/main.html
+++ b/url_shortener/templates/main.html
@@ -7,18 +7,29 @@
 		</div>
 		<fieldset class="form-group">
 			<div class="form-group">
-				<input id="url_input" type="text" name="url" class="form-control form-control-lg" placeholder="Paste link here">
+				<input id="url_input" type="text" name="url" class="form-control form-control-lg" placeholder="{{ _('Paste link here') }}">
 				<input id="form_range" type="range" name="duration" min="0" max="4" step="1" class="custom-range w-100 mb-2 mt-2"><br>
 				<h5 class="text-center"><label id="label_form_range" for="form_range" class="font-weight-normal"> </label></h5>
-				<button id="shorten_btn" class="btn btn-lg btn-outline-success w-100">Make it short!</button>
+				<button id="shorten_btn" class="btn btn-lg btn-outline-success w-100">{{ _('Make it short!') }}</button>
 			</div>
 		</fieldset>
 		<div class="form-group">
 			<div id="url_container" class="invisible">
 				<div id="url_shortened" class="form-control form-control-lg"></div>
-				<button id="copy_btn" class="btn btn-lg btn-success w-100">Copy</button>
+				<button id="copy_btn" class="btn btn-lg btn-success w-100">{{ _('Copy') }}</button>
 			</div>
 		</div>
 	</form>
+	<script type="text/javascript">
+		var l10n = {hours_24: "{{ _('24 Hours') }}",
+					week_1: "{{ _('1 Week') }}",
+					week_2: "{{ _('2 Weeks') }}",
+					month_1: "{{ _('1 Month') }}",
+					month_2: "{{ _('2 Months') }}",
+					error_text: "{{ _('error: ') }}",
+					warning_paste_link: "{{ _('Paste any link before shorten :)') }}",
+					warning_paste_new_link: "{{ _('Paste new link before shorten :)') }}"
+					};
+	</script>
 	<script type="text/javascript" src="{{ url_for('static', filename='js/ajax.js') }}"></script>
 {% endblock content %}
